# Lima-camera-simulator

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: LimaTools.cmake  SIPMacros.cmake  package_config.cmake  project-config.cmake.in  project_version.cmake
conda/camera/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.py
conda/tango/: bld.bat  meta.yaml
doc/: index.rst  tango.rst
include/simulator/: SimulatorBinCtrlObj.h  SimulatorCamera.h  SimulatorDetInfoCtrlObj.h  SimulatorFrameBuilder.h  SimulatorFrameGetter.h  SimulatorFrameLoader.h  SimulatorFramePrefetcher.h  SimulatorInterface.h  SimulatorRoiCtrlObj.h  SimulatorShutterCtrlObj.h  SimulatorSyncCtrlObj.h
python/: __init__.py
sip/: SimulatorCamera.sip  SimulatorFrameBuilder.sip  SimulatorFrameLoader.sip  SimulatorFramePrefetcher.sip  SimulatorInterface.sip  limamodules.sip.in
src/: SimulatorBinCtrlObj.cpp  SimulatorCamera.cpp  SimulatorDetInfoCtrlObj.cpp  SimulatorFrameBuilder.cpp  SimulatorFrameLoader.cpp  SimulatorFramePrefetcher.cpp  SimulatorInterface.cpp  SimulatorRoiCtrlObj.cpp  SimulatorShutterCtrlObj.cpp  SimulatorSyncCtrlObj.cpp
tango/: CMakeLists.txt  Simulator.py
test/: CMakeLists.txt  test.py  test_api.py  test_edf_parser.cpp  test_prepare_timeout.py  test_simulator.cpp  test_simulator_framebuilder.cpp  test_tango.py
